--- a/src/components/FilterProducts/filterProducts.css
+++ b/src/components/FilterProducts/filterProducts.css
@@ -1,13 +1,15 @@
-.container-filters{
+.container-filters {
     width: 100%;
     display: flex;
     justify-content: center;
 }
-.filter-products{
+
+.filter-products {
     width: 88%;
     padding: 22px 16px;
-    border-top:1px solid #15297c;
-    border-bottom:1px solid #15297c;;
+    border-top: 1px solid #15297c;
+    border-bottom: 1px solid #15297c;
+    ;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -15,26 +17,29 @@
     flex-wrap: wrap;
 }
 
-.selects-products{
+.selects-products {
     width: 190px;
     border-radius: 9mm;
     padding: 0.2rem;
 }
+
 @media screen and (max-width: 600px) {
-    .filter-products{
+    .filter-products {
         flex-direction: column;
         justify-content: center;
         align-items: center;
         gap: 1rem;
     }
-    
+
 }
-.inputSearch{
+
+.inputSearch {
     margin-left: 1rem;
     border-radius: 9mm;
     padding: 0.2rem;
 }
-.inputSearch::placeholder{
+
+.inputSearch::placeholder {
     padding-left: 1rem;
-    
+
 }
