--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,84 +1,91 @@
-.ContainerNavbar{
-    display: flex;
-    /* justify-content: center;
+.ContainerNavbar {
+  display: flex;
+  /* justify-content: center;
     align-items: center; */
-    flex-direction: column;
+  flex-direction: column;
 }
-.Navbar{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
+
+.Navbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
 }
-.UserContainer{
+
+.UserContainer {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   margin-bottom: 3rem;
 }
 
-.registerStyle{
+.registerStyle {
   margin: 10px;
   padding: 0.3rem;
   text-decoration: none;
 }
 
-.LogoHeader{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.LogoHeader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.SearchInput{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 25px;
+.SearchInput {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 25px;
 }
 
 
-.Li-Navbar{
-margin-left: 1rem;
-margin-right: 1rem;
+.Li-Navbar {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
-.TitleHeader{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.TitleHeader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.Ul-Navbar, .registerStyle {
-    border-radius: 6mm;
-    background: none;
-    border: 1px solid #eee;
-    box-shadow: 0 0 2px black;
-  }
-  .Li-Navbar {
-    float: left;
-    list-style-type: none;
-    font-family: Helvetica;
-    font-size: 14px;
-    border-left: none;
-    border-right: none;
-    text-align: center;
-    text-decoration: none;
-  }
+.Ul-Navbar,
+.registerStyle {
+  border-radius: 6mm;
+  background: none;
+  border: 1px solid #eee;
+  box-shadow: 0 0 2px black;
+}
 
-  li:hover, .Li-Navbar:hover {
-    background: #eee;
-    border-radius: 6mm;
-    cursor: pointer;
-  }
-  .desplegable-navbar:hover{
-    background: #eee;
-    border-radius: 6mm;
-    width: 110px;
-    cursor: pointer;
-  }
-  a {
-    color: black;
-    text-decoration: none;
+.Li-Navbar {
+  float: left;
+  list-style-type: none;
+  font-family: Helvetica;
+  font-size: 14px;
+  border-left: none;
+  border-right: none;
+  text-align: center;
+  text-decoration: none;
+}
+
+li:hover,
+.Li-Navbar:hover {
+  background: #eee;
+  border-radius: 6mm;
+  cursor: pointer;
+}
+
+.desplegable-navbar:hover {
+  background: #eee;
+  border-radius: 6mm;
+  width: 110px;
+  cursor: pointer;
+}
+
+a {
+  color: black;
+  text-decoration: none;
 }
 
 .list-style-none {
@@ -86,6 +93,6 @@ margin-right: 1rem;
   text-decoration: none;
 }
 
-.back-transparent-navbar{
+.back-transparent-navbar {
   background-color: rgba(250, 247, 247, 0.623) !important;
 }
